--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,10 +1,8 @@
 # .scrutinizer.yml
 
 filter:
-    paths: [lib/*]
-    excluded_paths: [vendor/*, tests/*]
-before_commands:
-    - 'composer install --dev --prefer-source'
+    excluded_paths: [tests/*]
+
 checks:
     php:
         remove_extra_empty_lines: true
@@ -25,14 +23,3 @@ tools:
     external_code_coverage:
         timeout: 600
         runs: 3
-    php_mess_detector: true
-    php_code_sniffer: true
-    sensiolabs_security_checker: true
-    php_code_coverage: true
-    php_pdepend: true
-    php_loc:
-        enabled: true
-        excluded_dirs: [vendor, tests]
-    php_cpd:
-        enabled: true
-        excluded_dirs: [vendor, tests]
